--- a/packages/api-plugin-commodo-mongodb/package.json
+++ b/packages/api-plugin-commodo-mongodb/package.json
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@commodo/fields-storage-mongodb": "^1.0.3",
+    "@commodo/fields-storage-mongodb": "^2.0.0-next.0",
     "mongodb": "^3.5.2"
   },
   "devDependencies": {
