--- a/packages/cli-scaffold-custom-lambda/package.json
+++ b/packages/cli-scaffold-custom-lambda/package.json
@@ -16,7 +16,8 @@
   "homepage": "https://github.com/webiny/webiny-js#readme",
   "dependencies": {
     "execa": "^4.0.0",
-    "lodash": "^4.17.15",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0"
   },
   "publishConfig": {
