--- a/sample-project/api/services/headless/graphql/package.json
+++ b/sample-project/api/services/headless/graphql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-headless-cms",
+  "name": "api-headless-cms",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
