chore: exclude CLI packages from TS checking

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -121,9 +121,7 @@
     "dist",
     "./scripts/**",
     "**jest**",
-    "./packages/cli",
-    "./packages/cli-scaffold-custom-lambda",
-    "./packages/cli-scaffold-graphql-service",
+    "./packages/cli**",
     "./packages/create-webiny-project",
     "./packages/cwp-template-full",
     "./packages/project-utils",
