feat: reduce CLI functionality to only the basic commands

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,36 +15,20 @@
   "dependencies": {
     "@webiny/plugins": "^3.0.1",
     "@webiny/tracking": "^3.1.0",
-    "ansi-escapes": "^4.2.1",
-    "boolean": "^3.0.1",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
     "env-cmd": "^9.0.3",
     "execa": "^2.0.5",
-    "figures": "^3.2.0",
     "find-up": "^4.1.0",
-    "glob": "^7.1.4",
-    "graphlib": "^2.1.7",
-    "inquirer": "^7.0.5",
+    "fs-extra": "^9.0.0",
     "load-json-file": "^6.2.0",
-    "lodash.kebabcase": "^4.1.1",
-    "node-fetch": "^2.6.0",
-    "node-notifier": "^6.0.0",
-    "ora": "^4.0.3",
-    "p-retry": "^4.2.0",
-    "ramda": "^0.26.1",
-    "strip-ansi": "^6.0.0",
-    "traverse": "^0.6.6",
-    "typescript": "^3.8.3",
+    "semver": "^7.3.2",
     "uniqid": "^5.0.3",
     "update-notifier": "^3.0.1",
     "uuid": "^3.3.3",
     "write-json-file": "^4.2.0",
-    "yargs": "^14.0.0",
-    "pkg-dir": "^4.2.0",
-    "get-yarn-workspaces": "^1.0.2",
-    "read-json-sync": "^2.0.1"
+    "yargs": "^14.0.0"
   },
   "license": "MIT",
   "publishConfig": {
