refactor: rename lambda scaffold package

--- a/packages/cli-plugin-scaffold-lambda/package.json
+++ b/packages/cli-plugin-scaffold-lambda/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "@webiny/cli-scaffold-custom-lambda",
+  "name": "@webiny/cli-plugin-scaffold-lambda",
   "version": "1.0.0",
   "description": "Scaffolds a custom lambda for you",
   "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/webiny/webiny-js.git"
+    "url": "git+https://github.com/webiny/webiny-js.git",
+    "directory": "packages/cli-plugin-scaffold-lambda"
   },
-  "author": "",
+  "author": "Webiny Ltd.",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/webiny/webiny-js/issues"
   },
   "homepage": "https://github.com/webiny/webiny-js#readme",
   "dependencies": {
-    "execa": "^4.0.0",
+    "@babel/core": "^7.9.6",
+    "find-up": "^4.1.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "prettier": "^2.0.5"
   },
   "publishConfig": {
     "access": "public",
     "directory": "."
+  },
+  "adio": {
+    "ignoreDirs": [
+      "template",
+      "node_modules"
+    ]
   }
 }
