--- a/packages/cwp-template-full/template/api/apolloGateway/package.json
+++ b/packages/cwp-template-full/template/api/apolloGateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-apollo-gateway",
+  "name": "api-apollo-gateway",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
