--- a/packages/cwp-template-full/template/api/files/download/package.json
+++ b/packages/cwp-template-full/template/api/files/download/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-files-download",
+  "name": "api-files-download",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
