--- a/packages/cwp-template-full/template/api/headless/copier/package.json
+++ b/packages/cwp-template-full/template/api/headless/copier/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-headless-copier",
+  "name": "api-headless-copier",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
