--- a/packages/cwp-template-full/template/api/headless/handler/package.json
+++ b/packages/cwp-template-full/template/api/headless/handler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-cms-handler",
+  "name": "api-cms-handler",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
