--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -13,11 +13,13 @@
     "Adrian Smijulj <adrian@webiny.com>"
   ],
   "dependencies": {
-    "@babel/core": "7.7.4",
+    "@apollo/react-ssr": "^3.1.5",
+    "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
     "@hot-loader/react-dom": "^16.13.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -66,8 +68,11 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "react-apollo": "^3.1.5",
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
+    "react-helmet": "^6.0.0",
+    "react-native-web": "^0.12.2",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
