--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "git-cz": "^1.7.1",
     "glob": "^7.1.3",
     "globby": "^8.0.1",
+    "got": "^9.6.0",
     "husky": "^4.2.3",
     "inquirer": "^7.0.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
@@ -127,6 +128,7 @@
     "commit": "node ./scripts/commitizen.js",
     "commit:no-verify": "yarn commit --no-verify",
     "commit:verify": "yarn lint-staged",
+    "commodo-versions": "node ./scripts/commodoVersions.js",
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
     "prettier": "prettier --config .prettierrc.js --write",
