--- a/packages/commodo-fields-storage-db-proxy/package.json
+++ b/packages/commodo-fields-storage-db-proxy/package.json
@@ -11,9 +11,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@commodo/fields": "^1.0.3-next.0",
-    "@commodo/fields-storage": "^2.0.0-next.0",
-    "@commodo/name": "^1.1.1-next.0",
+    "@commodo/fields": "^1.0.3-canary.6",
+    "@commodo/fields-storage": "^2.0.0-canary.6",
+    "@commodo/name": "^1.1.1-canary.6",
     "bson": "^4.0.2",
     "mdbid": "^1.0.0"
   },
