--- a/packages/api-plugin-commodo-db-proxy/package.json
+++ b/packages/api-plugin-commodo-db-proxy/package.json
@@ -15,13 +15,18 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/commodo-fields-storage-db-proxy": "^2.0.3"
+    "@webiny/commodo-fields-storage-db-proxy": "^2.0.3",
+    "mongodb": "^3.5.7",
+    "bson": "^4.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@webiny/graphql": "^1.0.0"
+    "@shelf/jest-mongodb": "^1.1.5",
+    "@types/mongodb": "^3.5.16",
+    "@webiny/graphql": "^1.0.0",
+    "@webiny/handler": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
