--- a/packages/api-plugin-files-resolvers-mongodb/tsconfig.build.json
+++ b/packages/api-plugin-files-resolvers-mongodb/tsconfig.build.json
@@ -1,9 +1,11 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
+  "exclude": ["node_modules", "./dist", "../commodo"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
-  }
+  },
+  "references": [{ "path": "../commodo/tsconfig.build.json" }]
 }
