--- a/packages/api-plugin-page-builder-resolvers-mongodb/package.json
+++ b/packages/api-plugin-page-builder-resolvers-mongodb/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@webiny/commodo": "^3.0.1",
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
