--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
       "sample-project/apps/*",
       "sample-project/api/services/apolloGateway",
       "sample-project/api/services/databaseProxy",
-      "sample-project/api/services/files",
+      "sample-project/api/services/files/*",
       "sample-project/api/services/formBuilder",
-      "sample-project/api/services/headless/handler",
-      "sample-project/api/services/headless/graphql",
-      "sample-project/api/services/headless/copier",
+      "sample-project/api/services/headless/*",
       "sample-project/api/services/i18n",
       "sample-project/api/services/pageBuilder",
-      "sample-project/api/services/security"
+      "sample-project/api/services/security/*"
     ],
     "nohoist": [
       "**/inquirer/**",
