--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "inquirer-maxlength-input-prompt": "^1.0.0",
     "jest": "^24.9.0",
     "jest-extended": "^0.11.2",
-    "lerna": "3.19.0",
+    "lerna": "^3.21.0",
     "lint-staged": "^7.2.2",
     "listr": "^0.14.3",
     "load-json-file": "^6.2.0",
