--- a/packages/serverless-files/package.json
+++ b/packages/serverless-files/package.json
@@ -33,7 +33,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "directory": "./dist"
+    "directory": "dist"
   },
   "adio": {
     "ignore": {
