--- a/packages/api-form-builder/package.json
+++ b/packages/api-form-builder/package.json
@@ -42,7 +42,8 @@
     "flow-copy-source": "^2.0.2"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
