--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -52,7 +52,8 @@
     "shortid": "^2.2.15"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
