--- a/packages/api-i18n/package.json
+++ b/packages/api-i18n/package.json
@@ -38,7 +38,8 @@
     "fsevents": "^2.1.3"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
