--- a/packages/api-mailchimp/package.json
+++ b/packages/api-mailchimp/package.json
@@ -30,7 +30,8 @@
     "apollo-server-lambda": "^2.9.6"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
