--- a/packages/api-plugin-commodo-db-proxy/package.json
+++ b/packages/api-plugin-commodo-db-proxy/package.json
@@ -29,7 +29,8 @@
     "@webiny/handler": "^0.1.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
