--- a/packages/api-security/package.json
+++ b/packages/api-security/package.json
@@ -37,8 +37,8 @@
     "fsevents": "^2.1.3"
   },
   "publishConfig": {
-    "directory": "./dist",
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
