--- a/packages/app-form-builder-theme/package.json
+++ b/packages/app-form-builder-theme/package.json
@@ -13,7 +13,8 @@
     "react": "^16.8.6"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
