--- a/packages/app-google-tag-manager/package.json
+++ b/packages/app-google-tag-manager/package.json
@@ -36,7 +36,8 @@
     "react-apollo": "^3.1.3"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
