--- a/packages/app-template-site/package.json
+++ b/packages/app-template-site/package.json
@@ -44,7 +44,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "directory": "./dist"
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
