--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -42,7 +42,8 @@
     "babel-plugin-lodash": "^3.3.4"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
