--- a/packages/commodo-fields-storage-db-proxy/package.json
+++ b/packages/commodo-fields-storage-db-proxy/package.json
@@ -18,7 +18,8 @@
     "mdbid": "^1.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "keywords": [
     "commodo",
