--- a/packages/commodo-graphql/package.json
+++ b/packages/commodo-graphql/package.json
@@ -28,7 +28,8 @@
     "@babel/preset-typescript": "^7.8.3"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
