--- a/packages/commodo/package.json
+++ b/packages/commodo/package.json
@@ -30,7 +30,8 @@
     "repropose": "^1.0.2"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
