--- a/packages/cwp-template-full/package.json
+++ b/packages/cwp-template-full/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cwp-template-full",
+  "name": "@webiny/cwp-template-full",
   "version": "0.1.34",
   "repository": {
     "type": "git",
