--- a/packages/handler-apollo-gateway/package.json
+++ b/packages/handler-apollo-gateway/package.json
@@ -30,7 +30,8 @@
     "jest-mock-console": "^1.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
