--- a/packages/handler-index/package.json
+++ b/packages/handler-index/package.json
@@ -25,7 +25,8 @@
     "@babel/preset-env": "^7.5.5"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
