--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,7 +20,8 @@
     "@babel/core": "^7.5.5"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
