--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -31,7 +31,8 @@
     "react": "^16.8.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
