--- a/packages/tracking/package.json
+++ b/packages/tracking/package.json
@@ -9,11 +9,8 @@
     "request": "^2.88.0"
   },
   "publishConfig": {
-    "access": "public"
-  },
-  "scripts": {
-    "build": "rm -rf dist && mkdir dist && cp index.js package.json LICENSE README.md dist/",
-    "prepublishOnly": "yarn build"
+    "access": "public",
+    "directory": "."
   },
   "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
