--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -29,6 +29,7 @@
     "lodash.upperfirst": "^4.3.1",
     "lodash.forown": "^4.4.0",
     "lodash.isobject": "^3.0.2",
+    "fast-deep-equal": "^3.1.1",
     "lodash.clonedeep": "^4.5.0",
     "pluralize": "^8.0.0"
   },
@@ -49,7 +50,8 @@
     "mdbid": "^1.0.0",
     "prettier": "^1.19.1",
     "ramda": "^0.27.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "sinon": "^9.0.2"
   },
   "publishConfig": {
     "access": "public",
