chore: remove "sample-project*" entries

--- a/lerna.json
+++ b/lerna.json
@@ -1,15 +1,6 @@
 {
   "packages": [
-    "packages/*",
-    "sample-project/apps/*",
-    "sample-project/api/apolloGateway",
-    "sample-project/api/databaseProxy",
-    "sample-project/api/files/*",
-    "sample-project/api/formBuilder",
-    "sample-project/api/headless/*",
-    "sample-project/api/i18n",
-    "sample-project/api/pageBuilder",
-    "sample-project/api/security/*"
+    "packages/*"
   ],
   "version": "4.0.0",
   "command": {
