--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -31,16 +31,14 @@
     "lodash.isobject": "^3.0.2",
     "fast-deep-equal": "^3.1.1",
     "lodash.clonedeep": "^4.5.0",
-    "pluralize": "^8.0.0"
+    "pluralize": "^8.0.0",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
-    "@commodo/fields-storage": "2.0.0-next.11",
-    "@commodo/fields": "1.0.3-next.11",
-    "@commodo/name": "1.1.1-next.11",
     "@shelf/jest-mongodb": "^1.1.3",
     "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
     "@webiny/api-plugin-commodo-mongodb": "^2.0.2",
@@ -49,8 +47,7 @@
     "graphql": "^14.6.0",
     "mdbid": "^1.0.0",
     "prettier": "^1.19.1",
-    "ramda": "^0.27.0",
-    "shortid": "^2.2.15",
+
     "sinon": "^9.0.2"
   },
   "publishConfig": {
