fix: convert all app plugins to factories

--- a/packages/app-headless-cms/tsconfig.json
+++ b/packages/app-headless-cms/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../app" },
     { "path": "../app-admin" },
     { "path": "../app-i18n" },
+    { "path": "../app-template" },
     { "path": "../form" },
     { "path": "../plugins" }
 
