--- a/packages/app-headless-cms/tsconfig.build.json
+++ b/packages/app-headless-cms/tsconfig.build.json
@@ -7,6 +7,7 @@
     "../app",
     "../app-admin",
     "../app-i18n",
+    "../app-template",
     "../form",
     "../plugins"
   ],
@@ -19,6 +20,7 @@
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-admin/tsconfig.build.json" },
     { "path": "../app-i18n/tsconfig.build.json" },
+    { "path": "../app-template/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" }
   ]
