feat: introduce a project template for CMS

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -124,6 +124,7 @@
     "./packages/cli**",
     "./packages/create-webiny-project",
     "./packages/cwp-template-full",
+    "./packages/cwp-template-cms",
     "./packages/project-utils",
     "./packages/serverless-api-gateway",
     "./packages/serverless-apollo-service",
