--- a/packages/cwp-template-full/template/apps/site/package.json
+++ b/packages/cwp-template-full/template/apps/site/package.json
@@ -1,57 +1,18 @@
 {
   "name": "site",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app": "file:../../../../app",
-    "@webiny/app-cookie-policy": "file:../../../../app-cookie-policy",
-    "@webiny/app-form-builder": "file:../../../../app-form-builder",
-    "@webiny/app-google-tag-manager": "file:../../../../app-google-tag-manager",
-    "@webiny/app-i18n": "file:../../../../app-i18n",
-    "@webiny/app-mailchimp": "file:../../../../app-mailchimp",
-    "@webiny/app-page-builder": "file:../../../../app-page-builder",
-    "@webiny/app-page-builder-theme": "file:../../../../app-page-builder-theme",
-    "@webiny/app-template-site": "file:../../../../app-template-site",
-    "@webiny/app-typeform": "file:../../../../app-typeform",
-    "@webiny/plugins": "file:../../../../plugins",
-    "@webiny/react-router": "file:../../../../react-router",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-link-batch-http": "^1.2.3",
-    "apollo-link-http": "^1.5.9",
-    "core-js": "^3.2.1",
-    "cross-fetch": "^3.0.2",
-    "emotion": "^10.0.27",
-    "env-cmd": "^9.0.3",
-    "isutf8": "^2.1.0",
-    "react-apollo": "^3.1.0",
-    "react-app-env": "^1.2.3",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.5",
-    "react-router-dom": "^5.0.0",
-    "regenerator-runtime": "^0.13.3"
+    "@webiny/app-template-site": "latest",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@apollo/react-ssr": "^3.0.1",
-    "apollo-link-error": "^1.1.11",
-    "babel-loader": "^8.0.6",
-    "file-loader": "^4.2.0",
-    "mime-types": "^2.1.24",
-    "node-sass": "^4.9.3",
-    "null-loader": "^1.0.0",
-    "raw-loader": "^2.0.0",
-    "react-scripts": "^3.3.0",
-    "source-map-explorer": "^1.6.0",
-    "webpackbar": "^4.0.0"
-  },
-  "peerDependencies": {
-    "apollo-cache-inmemory": "^1.4.2",
-    "apollo-client": "^2.2.8",
-    "apollo-link": "^1.2.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.6.0"
+    "env-cmd": "^10.1.0",
+    "@webiny/cli": "latest",
+    "@webiny/project-utils": "latest"
   },
   "scripts": {
-    "analyze": "source-map-explorer build/static/js/main.*",
     "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build",
     "build:ssr:dev": "env-cmd -r .env.json -e default,dev webiny run build-ssr",
