--- a/sample-project/apps/cmsOnly/package.json
+++ b/sample-project/apps/cmsOnly/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "admin",
+  "name": "cms-only",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-admin-full": "^1.0.0",
+    "@webiny/app-template-admin": "^1.0.0",
+    "@webiny/app-headless-cms": "^2.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -13,7 +14,6 @@
     "@webiny/project-utils": "^1.0.2"
   },
   "scripts": {
-    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "env-cmd -r .env.json -e default,local webiny run start",
     "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build"
