fix: 🐛  Add @webiny to template. Fix run template-specific actions
Changes template to have @webiny tag, template-specific actions now pulls cwpTemplate from proper
location if template was not a file.

--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-webiny-project",
+  "name": "@webiny/create-webiny-project",
   "version": "0.1.11",
   "description": "local build tool to create webiny project with specific template",
   "main": "index.js",
