chore: update template files

--- a/packages/cwp-template-cms/template/api/headless/api/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/headless/api/tsconfig.json
@@ -3,8 +3,8 @@
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../../packages/api-headless-cms" },
+    { "path": "../../../../packages/api-i18n" },
     { "path": "../../../../packages/api-security" },
-    { "path": "../../../../packages/handler" },
-    { "path": "../../../../packages/handler-apollo-server" }
+    { "path": "../../../../packages/handler" }
   ]
 }
