--- a/packages/cwp-template-cms/package.json
+++ b/packages/cwp-template-cms/package.json
@@ -12,5 +12,10 @@
   "dependencies": {
     "fs-extra": "^9.0.0",
     "uuid": "^7.0.3"
+  },
+  "adio": {
+    "ignoreDirs": [
+      "template"
+    ]
   }
 }
