--- a/packages/handler-apollo-gateway/package.json
+++ b/packages/handler-apollo-gateway/package.json
@@ -18,10 +18,14 @@
     "@apollo/gateway": "^0.14.1",
     "@webiny/graphql": "^1.0.0",
     "@webiny/handler": "^0.1.0",
+    "@webiny/plugins": "^3.0.1",
     "apollo-server-lambda": "^2.4.3",
-    "apollo-server-env": "^2.4.3"
+    "apollo-server-env": "^2.4.3",
+    "boolean": "^3.0.1",
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
+    "@apollo/federation": "^0.16.0",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
