--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -74,6 +74,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.8.3",
+    "@webiny/app-template": "^1.0.0",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-named-asset-import": "^1.0.0-next.3e165448"
