--- a/packages/app-security/package.json
+++ b/packages/app-security/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@emotion/styled": "^10.0.27",
     "@webiny/app": "^3.0.6",
     "@webiny/app-admin": "^3.0.8",
     "@webiny/form": "^3.0.2",
