--- a/packages/app-template-admin-full/package.json
+++ b/packages/app-template-admin-full/package.json
@@ -20,6 +20,7 @@
     "@webiny/app-form-builder": "^2.0.5",
     "@webiny/app-form-builder-theme": "^2.0.3",
     "@webiny/app-google-tag-manager": "^3.0.4",
+    "@webiny/app-headless-cms": "^2.0.8",
     "@webiny/app-mailchimp": "^3.0.5",
     "@webiny/app-page-builder": "^3.1.3",
     "@webiny/app-page-builder-theme": "^2.0.4",
