--- a/packages/app-template-site/package.json
+++ b/packages/app-template-site/package.json
@@ -29,6 +29,10 @@
     "@webiny/app-template": "^1.0.0",
     "@webiny/app-typeform": "^3.0.9",
     "@webiny/react-router": "^2.0.1",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14",
+    "apollo-cache-inmemory": "^1.6.6",
     "react-apollo": "^3.1.3"
   },
   "devDependencies": {
