--- a/packages/commodo-fields-storage-db-proxy/package.json
+++ b/packages/commodo-fields-storage-db-proxy/package.json
@@ -12,10 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@commodo/fields": "1.0.3-next.11",
-    "@commodo/fields-storage": "2.0.0-next.11",
-    "@commodo/name": "1.1.1-next.11",
-    "bson": "^4.0.2",
-    "mdbid": "^1.0.0"
+    "bson": "^4.0.2"
   },
   "publishConfig": {
     "access": "public",
