--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -13,8 +13,16 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/federation": "^0.16.0",
     "@babel/runtime": "^7.5.5",
-    "@webiny/plugins": "^3.0.1"
+    "@webiny/plugins": "^3.0.1",
+    "apollo-graphql": "^0.4.4",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "graphql-tools": "^5.0.0",
+    "graphql-type-json": "^0.3.1",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-type-long": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
