--- a/packages/serverless-aws-lambda/package.json
+++ b/packages/serverless-aws-lambda/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.474.0",
     "fs-extra": "^7.0.0",
     "globby": "^9.2.0",
+    "p-retry": "^4.2.0",
     "ramda": "^0.26.0"
   },
   "devDependencies": {
