--- a/packages/serverless-aws-s3/package.json
+++ b/packages/serverless-aws-s3/package.json
@@ -12,12 +12,14 @@
   ],
   "license": "Apache",
   "dependencies": {
+    "@serverless/core": "^1.1.2",
     "@webiny/serverless-component": "^0.1.0",
     "archiver": "^3.0.0",
     "aws-sdk": "^2.488.0",
     "fs-extra": "^7.0.0",
     "klaw-sync": "^6.0.0",
     "mime-types": "^2.1.22",
+    "p-retry": "^4.2.0",
     "ramda": "^0.26.1",
     "s3-stream-upload": "^2.0.2"
   }
