--- a/packages/cwp-template-full/template/api/databaseProxy/package.json
+++ b/packages/cwp-template-full/template/api/databaseProxy/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "mongodb": "^3.5.7",
-    "bson": "^4.0.4"
+    "@webiny/handler": "^0.1.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4"
   }
 }
