--- a/packages/cwp-template-full/template/api/files/manage/tsconfig.json
+++ b/packages/cwp-template-full/template/api/files/manage/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../../../../../tsconfig",
+  "extends": "../../../../tsconfig",
   "references": [
-    { "path": "../../../../../packages/serverless-files" },
-    { "path": "../../../../../packages/handler" }
+    { "path": "../../../../packages/serverless-files" },
+    { "path": "../../../../packages/handler" }
   ]
 }
