chore: remove cli and project-utils from app deps

--- a/packages/cwp-template-full/template/apps/site/package.json
+++ b/packages/cwp-template-full/template/apps/site/package.json
@@ -8,9 +8,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "@webiny/cli": "latest",
-    "@webiny/project-utils": "latest"
+    "env-cmd": "^10.1.0"
   },
   "scripts": {
     "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
