--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webiny/create-webiny-project",
+  "name": "create-webiny-project",
   "version": "0.1.11",
   "description": "local build tool to create webiny project with specific template",
   "main": "index.js",
