--- a/sample-project/apps/admin/package.json
+++ b/sample-project/apps/admin/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "start": "env-cmd -r .env.json -e default,local webiny run start",
+    "start": "env-cmd -r .env.json -e default,dev webiny run start",
     "build:dev": "env-cmd -r .env.json -e default,dev webiny run build",
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build"
   },
