--- a/sample-project/apps/site/package.json
+++ b/sample-project/apps/site/package.json
@@ -55,7 +55,7 @@
     "build:prod": "env-cmd -r .env.json -e default,prod webiny run build",
     "build:ssr:dev":  "env-cmd -r .env.json -e default,dev webiny run build-ssr",
     "build:ssr:prod":  "env-cmd -r .env.json -e default,prod webiny run build-ssr",
-    "start": "env-cmd -r .env.json -e default,local webiny run start"
+    "start": "env-cmd -r .env.json -e default,dev webiny run start"
   },
   "browserslist": {
     "development": [
