--- a/packages/cwp-template-full/template/api/pageBuilder/package.json
+++ b/packages/cwp-template-full/template/api/pageBuilder/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@webiny/handler": "^0.1.0",
     "@webiny/handler-apollo-server": "^0.1.0",
+    "@webiny/api-google-tag-manager": "^3.0.3",
+    "@webiny/api-cookie-policy": "^3.0.3",
+    "@webiny/api-mailchimp": "^3.0.3",
+    "@webiny/api-plugin-page-builder-resolvers-mongodb": "^2.0.2",
     "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
     "@webiny/api-security": "^3.1.0",
     "@webiny/api-i18n": "^3.0.3",
