--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -51,6 +51,7 @@
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "null-loader": "^4.0.0",
+    "node-sass": "^4.14.1",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
