--- a/packages/cwp-template-cms/template/tsconfig.build.json
+++ b/packages/cwp-template-cms/template/tsconfig.build.json
@@ -9,7 +9,7 @@
     "lib": ["dom", "dom.iterable"],
     "esModuleInterop": true,
     "declaration": true,
-    "composite": true,
+    "composite": false,
     "noEmit": false,
     "jsx": "preserve",
     "emitDeclarationOnly": true,
