--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -35,6 +35,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-preset-react-app": "^9.1.0",
     "boolean": "^3.0.1",
     "camelcase": "^5.3.1",
@@ -76,6 +77,7 @@
     "terser-webpack-plugin": "2.2.1",
     "ts-pnp": "1.1.5",
     "url-loader": "2.3.0",
+    "raw-loader": "^4.0.1",
     "webpack": "4.41.2",
     "webpack-dev-server": "3.9.0",
     "webpack-manifest-plugin": "2.2.0",
