chore: ⚡️  Fix references for ts.config.json

--- a/packages/cwp-template-cms/template/api/apolloGateway/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/apolloGateway/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "../../../../tsconfig",
-  "references": [
-    { "path": "../../../../packages/handler" },
-    { "path": "../../../../packages/handler-apollo-gateway" }
-  ]
+  "extends": "../../../../tsconfig"
 }
