--- a/packages/cwp-template-cms/template/api/security/graphql/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/security/graphql/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "../../../../../tsconfig",
-  "references": [
-    { "path": "../../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../../packages/api-security" },
-    { "path": "../../../../../packages/handler" },
-    { "path": "../../../../../packages/handler-apollo-server" }
-  ]
+  "extends": "../../../../../tsconfig"
 }
