--- a/packages/cwp-template-full/template/api/databaseProxy/tsconfig.json
+++ b/packages/cwp-template-full/template/api/databaseProxy/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "../../../tsconfig",
-  "references": [
-    { "path": "../../../packages/handler" },
-    { "path": "../../../packages/api-plugin-commodo-db-proxy" }
-  ]
+  "extends": "../../../tsconfig"
 }
