--- a/packages/cwp-template-full/template/api/files/graphql/tsconfig.json
+++ b/packages/cwp-template-full/template/api/files/graphql/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "extends": "../../../../tsconfig",
-  "references": [
-    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../packages/api-security" },
-    { "path": "../../../../packages/api-files" },
-    { "path": "../../../../packages/api-plugin-files-resolvers-mongodb" },
-    { "path": "../../../../packages/handler" },
-    { "path": "../../../../packages/handler-apollo-server" }
-  ]
+  "extends": "../../../../tsconfig"
 }
