--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -23,6 +23,7 @@
     "envinfo": "^7.5.0",
     "execa": "^4.0.0",
     "fast-glob": "^3.2.2",
+    "find-up": "^4.1.0",
     "fs-extra": "^9.0.0",
     "listr": "^0.14.3",
     "node-fetch": "^2.6.0",
