--- a/packages/serverless-files/package.json
+++ b/packages/serverless-files/package.json
@@ -6,18 +6,13 @@
   "dependencies": {
     "@webiny/handler": "^0.1.0",
     "@webiny/project-utils": "^1.0.2",
-    "aws-sdk": "^2.539.0"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.6.3",
-    "@types/sharp": "^0.25.0",
-    "babel-loader": "^8.0.6",
-    "concurrently": "^5.0.0",
+    "aws-sdk": "^2.539.0",
     "extract-zip": "^1.6.7",
     "object-hash": "^1.3.1",
-    "sanitize-filename": "^1.6.3",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.9"
+    "sanitize-filename": "^1.6.3"
+  },
+  "devDependencies": {
+    "@types/sharp": "^0.25.0"
   },
   "scripts": {
     "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
