--- a/packages/commodo/package.json
+++ b/packages/commodo/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "@webiny/commodo",
-  "version": "4.0.0-beta.0",
-  "main": "index.js",
-  "types": "types.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/webiny/webiny-js.git"
-  },
-  "description": "A set of frequently used Commodo higher order functions.",
-  "contributors": [
-    "Pavel Denisjuk <pavel@webiny.com>",
-    "Sven Al Hamad <sven@webiny.com>",
-    "Adrian Smijulj <adrian@webiny.com>"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "@commodo/fields": "1.0.3-next.11",
-    "@commodo/fields-storage": "2.0.0-next.11",
-    "@commodo/fields-storage-ref": "1.0.3-next.11",
-    "@commodo/fields-storage-soft-delete": "2.0.0-next.11",
-    "@commodo/hooks": "1.0.3-next.11",
-    "@commodo/name": "1.1.1-next.11",
-    "commodo-fields-date": "^1.0.3",
-    "commodo-fields-float": "^1.0.2",
-    "commodo-fields-int": "^1.0.1",
-    "commodo-fields-object": "^1.0.3",
-    "commodo-fields-storage-crud-logs": "^1.0.2",
-    "ramda": "^0.26.1",
-    "repropose": "^1.0.2"
-  },
-  "publishConfig": {
-    "access": "public",
-    "directory": "dist"
-  },
-  "scripts": {
-    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
-    "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
-    "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
-    "prepublishOnly": "yarn build"
-  },
-  "gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
+	"name": "@webiny/commodo",
+	"version": "4.0.0-beta.0",
+	"main": "index.js",
+	"types": "types.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/webiny/webiny-js.git"
+	},
+	"description": "A set of frequently used Commodo higher order functions.",
+	"contributors": [
+		"Pavel Denisjuk <pavel@webiny.com>",
+		"Sven Al Hamad <sven@webiny.com>",
+		"Adrian Smijulj <adrian@webiny.com>"
+	],
+	"license": "MIT",
+	"dependencies": {
+		"@commodo/fields": "^1.1.0-next.1",
+		"@commodo/fields-storage": "^2.0.0-next.14",
+		"@commodo/fields-storage-ref": "^1.1.0-next.1",
+		"@commodo/fields-storage-soft-delete": "^2.0.0-next.14",
+		"@commodo/hooks": "^1.1.0-next.1",
+		"@commodo/name": "^1.2.0-next.1",
+		"commodo-fields-date": "^1.0.3",
+		"commodo-fields-float": "^1.0.2",
+		"commodo-fields-int": "^1.0.1",
+		"commodo-fields-object": "^1.0.3",
+		"commodo-fields-storage-crud-logs": "^1.0.2",
+		"ramda": "^0.26.1",
+		"repropose": "^1.0.2"
+	},
+	"publishConfig": {
+		"access": "public",
+		"directory": "dist"
+	},
+	"scripts": {
+		"build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
+		"watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
+		"postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
+		"prepublishOnly": "yarn build"
+	},
+	"gitHead": "71cab7d5607b2e32a63034e324a663770507b32b"
 }
