feat: ✨  Add `yarn webiny-versions` command
Update dependecy version as per next release version for all webiny/* packages inside sample-project
workspace

--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "commit:no-verify": "yarn commit --no-verify",
     "commit:verify": "yarn lint-staged",
     "commodo-versions": "node ./scripts/commodoVersions.js",
+    "webiny-versions": "node ./scripts/webinyVersions.js",
     "lint-staged": "lint-staged",
     "postinstall": "node ./scripts/linkPackages.js",
     "prettier": "prettier --config .prettierrc.js --write",
