--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,7 @@
     "execa": "^2.0.5",
     "find-up": "^4.1.0",
     "fs-extra": "^9.0.0",
+    "indent-string": "^4.0.0",
     "load-json-file": "^6.2.0",
     "semver": "^7.3.2",
     "uniqid": "^5.0.3",
