feat(cli-plugin-deploy-components): process user-defined hooks

--- a/packages/cli-plugin-deploy-components/package.json
+++ b/packages/cli-plugin-deploy-components/package.json
@@ -26,8 +26,9 @@
     "get-yarn-workspaces": "^1.0.2",
     "graphlib": "^2.1.8",
     "load-json-file": "^6.2.0",
+    "lodash.get": "^4.4.2",
     "lodash.kebabcase": "^4.1.1",
-    "node-notifier": "^7.0.0",
+    "node-notifier": "^7.0.1",
     "ora": "^4.0.4",
     "ramda": "^0.27.0",
     "strip-ansi": "^6.0.0",
