--- a/packages/cwp-template-full/package.json
+++ b/packages/cwp-template-full/package.json
@@ -14,5 +14,10 @@
     "chalk": "^4.0.0",
     "fs-extra": "^9.0.0",
     "uuid": "^7.0.3"
+  },
+  "adio": {
+    "ignoreDirs": [
+      "/template/"
+    ]
   }
 }
