--- a/packages/create-webiny-project/package.json
+++ b/packages/create-webiny-project/package.json
@@ -32,6 +32,7 @@
     "p-retry": "^4.2.0",
     "semver": "^7.3.2",
     "uniqid": "^5.2.0",
+    "uuid": "^8.1.0",
     "validate-npm-package-name": "^3.0.0",
     "write-json-file": "^4.3.0",
     "yargs": "^15.3.1"
