--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -53,7 +53,6 @@
     "fs-extra": "^8.1.0",
     "get-yarn-workspaces": "^1.0.2",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "load-json-file": "^6.2.0",
     "lodash.get": "^4.4.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -88,8 +87,7 @@
     "webpack": "4.41.2",
     "webpack-dev-server": "3.9.0",
     "webpack-manifest-plugin": "2.2.0",
-    "webpackbar": "^4.0.0",
-    "write-json-file": "^4.3.0"
+    "webpackbar": "^4.0.0"
   },
   "license": "MIT",
   "adio": {
@@ -103,7 +101,10 @@
         "@babel/preset-react",
         "@babel/plugin-syntax-object-rest-spread",
         "@svgr/webpack",
-        "@types/webpack-env"
+        "@types/webpack-env",
+        "babel-plugin-lodash",
+        "raw-loader",
+        "node-sass"
       ]
     }
   },
