--- a/packages/api-plugin-commodo-nedb/tsconfig.build.json
+++ b/packages/api-plugin-commodo-nedb/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "../graphql", "../commodo-fields-storage-nedb", "../handler"],
+  "exclude": ["node_modules", "../graphql", "../handler"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -9,7 +9,6 @@
   },
   "references": [
     { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../handler/tsconfig.build.json" },
-    { "path": "../commodo-fields-storage-nedb/tsconfig.build.json" }
+    { "path": "../handler/tsconfig.build.json" }
   ]
 }
