--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -132,6 +132,7 @@
     "./packages/serverless-aws-api-gateway",
     "./packages/serverless-aws-cloudfront",
     "./packages/serverless-aws-cognito-user-pool",
+    "./packages/serverless-aws-iam-role",
     "./packages/serverless-aws-lambda",
     "./packages/serverless-aws-s3",
     "./packages/serverless-aws-s3-object",
