--- a/packages/api-cookie-policy/tsconfig.build.json
+++ b/packages/api-cookie-policy/tsconfig.build.json
@@ -4,6 +4,7 @@
   "exclude": [
     "node_modules",
     "../api-security",
+    "../api-settings-manager",
     "../commodo",
     "../commodo-graphql",
     "../validation"
@@ -15,6 +16,7 @@
   },
   "references": [
     { "path": "../api-security/tsconfig.build.json" },
+    { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
   ]
