--- a/packages/api-form-builder/package.json
+++ b/packages/api-form-builder/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
     "flow-copy-source": "^2.0.2"
   },
   "publishConfig": {
