--- a/packages/api-form-builder/tsconfig.build.json
+++ b/packages/api-form-builder/tsconfig.build.json
@@ -6,6 +6,7 @@
     "../graphql",
     "../api-i18n",
     "../api-security",
+    "../api-settings-manager",
     "../commodo",
     "../commodo-graphql",
     "../handler-ssr",
@@ -20,6 +21,7 @@
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-i18n/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
+    { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
     { "path": "../handler-ssr/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
