--- a/packages/api-form-builder/tsconfig.json
+++ b/packages/api-form-builder/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../graphql" },
     { "path": "../api-i18n" },
     { "path": "../api-security" },
+    { "path": "../api-settings-manager" },
     { "path": "../commodo" },
     { "path": "../commodo-graphql" },
     { "path": "../handler-ssr" },
