--- a/packages/api-google-tag-manager/tsconfig.json
+++ b/packages/api-google-tag-manager/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig",
   "references": [
     { "path": "../api-security" },
+    { "path": "../api-settings-manager" },
     { "path": "../commodo" },
     { "path": "../commodo-graphql" }
   ]
