--- a/packages/api-mailchimp/package.json
+++ b/packages/api-mailchimp/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.8.3",
     "@svgr/webpack": "^4.3.2",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
     "apollo-server-lambda": "^2.9.6"
   },
   "publishConfig": {
