--- a/packages/api-mailchimp/tsconfig.build.json
+++ b/packages/api-mailchimp/tsconfig.build.json
@@ -1,7 +1,15 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../graphql", "../api-security", "../commodo", "../commodo-graphql"],
+  "exclude": [
+    "node_modules",
+    "./dist",
+    "../graphql",
+    "../api-security",
+    "../api-settings-manager",
+    "../commodo",
+    "../commodo-graphql"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -10,6 +18,7 @@
   "references": [
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
+    { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" }
   ]
 }
