--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
       "packages/*",
       "sample-project/apps/*",
       "sample-project/api/apolloGateway",
+      "sample-project/api/settingsManager",
       "sample-project/api/databaseProxy",
       "sample-project/api/files/*",
       "sample-project/api/formBuilder",
       "sample-project/api/cms/*",
-      "sample-project/api/i18n",
+      "sample-project/api/i18n/*",
       "sample-project/api/pageBuilder",
       "sample-project/api/security/*"
     ],
