--- a/packages/api-google-tag-manager/package.json
+++ b/packages/api-google-tag-manager/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
     "@svgr/webpack": "^4.3.2"
   },
   "publishConfig": {
