--- a/packages/api-page-builder/tsconfig.build.json
+++ b/packages/api-page-builder/tsconfig.build.json
@@ -5,6 +5,7 @@
     "node_modules",
     "../graphql",
     "../api-security",
+    "../api-settings-manager",
     "../commodo",
     "../commodo-graphql",
     "../handler-ssr",
@@ -18,6 +19,7 @@
   "references": [
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
+    { "path": "../api-settings-manager/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
     { "path": "../handler-ssr/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
