--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -31,6 +31,7 @@
       "@webiny/api-plugin-commodo-db-proxy": ["./packages/api-plugin-commodo-db-proxy/src"],
       "@webiny/api-plugin-commodo-mongodb/*": ["./packages/api-plugin-commodo-mongodb/src/*"],
       "@webiny/api-plugin-commodo-mongodb": ["./packages/api-plugin-commodo-mongodb/src"],
+      "@webiny/api-settings-manager/*": ["./packages/api-settings-manager/src/*"],
       "@webiny/api-security/*": ["./packages/api-security/src/*"],
       "@webiny/api-security": ["./packages/api-security/src"],
       "@webiny/app/*": ["./packages/app/src/*"],
