--- a/packages/cwp-template-cms/template/api/apolloGateway/package.json
+++ b/packages/cwp-template-cms/template/api/apolloGateway/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/handler-apollo-gateway": "^0.1.0"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/handler-apollo-gateway": "^4.0.0-beta.1"
   }
 }
