--- a/packages/cwp-template-cms/template/api/files/transform/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/files/transform/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../../../../../tsconfig"
+  "extends": "../../../../tsconfig",
+  "references": [
+    { "path": "../../../../packages/serverless-files" },
+    { "path": "../../../../packages/handler" }
+  ]
 }
