--- a/packages/cwp-template-cms/template/api/security/validateAccessToken/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/security/validateAccessToken/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../../../../tsconfig"
+  "extends": "../../../../tsconfig",
+  "references": [
+    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/handler" },
+    { "path": "../../../../packages/handler-apollo-server" }
+  ]
 }
