--- a/packages/cwp-template-full/template/api/cms/content/package.json
+++ b/packages/cwp-template-full/template/api/cms/content/package.json
@@ -5,7 +5,8 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/api-headless-cms": "^0.1.0"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/api-headless-cms": "^4.0.0-beta.1",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1"
   }
 }
