--- a/packages/cwp-template-full/template/api/pageBuilder/package.json
+++ b/packages/cwp-template-full/template/api/pageBuilder/package.json
@@ -5,15 +5,12 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/handler-apollo-server": "^0.1.0",
-    "@webiny/api-google-tag-manager": "^3.0.3",
-    "@webiny/api-cookie-policy": "^3.0.3",
-    "@webiny/api-mailchimp": "^3.0.3",
-    "@webiny/api-plugin-page-builder-resolvers-mongodb": "^2.0.2",
-    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
-    "@webiny/api-security": "^3.1.0",
-    "@webiny/api-i18n": "^3.0.3",
-    "@webiny/api-page-builder": "^3.1.3"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/handler-apollo-server": "^4.0.0-beta.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
+    "@webiny/api-settings-manager": "^4.0.0-beta.1",
+    "@webiny/api-security": "^4.0.0-beta.1",
+    "@webiny/api-i18n": "^4.0.0-beta.1",
+    "@webiny/api-page-builder": "^4.0.0-beta.1"
   }
 }
