--- a/packages/cwp-template-full/template/api/security/validateAccessToken/package.json
+++ b/packages/cwp-template-full/template/api/security/validateAccessToken/package.json
@@ -5,8 +5,8 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^0.1.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^2.0.4",
-    "@webiny/api-security": "^3.1.0"
+    "@webiny/handler": "^4.0.0-beta.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
+    "@webiny/api-security": "^4.0.0-beta.1"
   }
 }
