--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -39,6 +39,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
+    "@commodo/fields-storage-nedb": "^2.0.0-next.15",
     "@shelf/jest-mongodb": "^1.1.3",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.1",
     "@webiny/api-plugin-commodo-mongodb": "^4.0.0-beta.1",
