--- a/packages/api-google-tag-manager/package.json
+++ b/packages/api-google-tag-manager/package.json
@@ -15,6 +15,7 @@
     "@webiny/api-security": "^4.0.0-beta.2",
     "@webiny/commodo": "^4.0.0-beta.1",
     "@webiny/commodo-graphql": "^4.0.0-beta.1",
+    "@webiny/graphql": "^4.0.0-beta.0",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.4"
   },
@@ -25,6 +26,9 @@
     "@babel/preset-typescript": "^7.8.3",
     "@webiny/api-settings-manager": "^4.0.0-beta.1",
     "@svgr/webpack": "^4.3.2"
+  },
+  "peerDependencies": {
+    "@webiny/graphql": "^4.0.0-beta.0"
   },
   "publishConfig": {
     "access": "public",
