chore: update the list of contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -162,6 +162,20 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/40340340?v=4",
       "profile": "https://github.com/Jeremytijal",
       "contributions": []
+    },
+    {
+      "login": "sunguru98",
+      "name": "Sundeep Charan Ramkumar",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/32637757?v=4",
+      "profile": "https://sundeepcharan.com",
+      "contributions": []
+    },
+    {
+      "login": "boyuan459",
+      "name": "boyuan459",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8401511?v=4",
+      "profile": "https://github.com/boyuan459",
+      "contributions": []
     }
   ],
   "contributorsPerLine": 6,
